--- a/index.html
+++ b/index.html
@@ -1,6 +1,71 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <meta charset="utf-8">
+
+    <!-- 微信搜索公众号『 程序员鱼皮 』，学习编程技术，发现更多好玩的项目！ -->
+    <title>合成大怪獸</title>
+
+    <!--http://www.html5rocks.com/en/mobile/mobifying/-->
+    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1, minimum-scale=1,maximum-scale=1" />
+
+    <!--https://developer.apple.com/library/safari/documentation/AppleApplications/Reference/SafariHTMLRef/Articles/MetaTags.html-->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="format-detection" content="telephone=no">
+
+    <!-- force webkit on 360 -->
+    <meta name="renderer" content="webkit" />
+    <meta name="force-rendering" content="webkit" />
+    <!-- force edge on IE -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="msapplication-tap-highlight" content="no">
+
+    <!-- force full screen on some browser -->
+    <meta name="full-screen" content="yes" />
+    <meta name="x5-fullscreen" content="true" />
+    <meta name="360-fullscreen" content="true" />
+
+    <!-- force screen orientation on some browser -->
+    <meta name="screen-orientation" content="" />
+    <meta name="x5-orientation" content="">
+
+    <!--fix fireball/issues/3568 -->
+    <!--<meta name="browsermode" content="application">-->
+    <meta name="x5-page-mode" content="app">
+
+    <!--<link rel="apple-touch-icon" href=".png" />-->
+    <!--<link rel="apple-touch-icon-precomposed" href=".png" />-->
+
+
+    <!-- <script>
+        pushHistory();
+        window.addEventListener("popstate", function(e) {
+
+        }, false);
+        function pushHistory() {
+            var state = {
+                title: "",
+                url: window.location.href
+            };
+            window.history.pushState(state, state.title, state.url);
+        }
+    </script> -->
+<!--    <script type="text/javascript">
+        var ua = navigator.userAgent.toLowerCase(); //获取判断用的对象
+        //判断是否是微信下访问
+        if (ua.match(/MicroMessenger/i) == "micromessenger") {
+            // if (/(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent)) {
+            location.href = "https://mp.weixin.qq.com/s/m0U0L-vnD0Gu8aPJ2vcPoA";
+            // }
+        }
+    </script>-->
+
+    <link rel="stylesheet" type="text/css" href="style-mobile.css" />
+
+</head>
+
 <body style="margin: 0; background: #ddd;" align="center">
     <div style="align:center;display: none"><img src="res/share.jpg" width="10%" /></div>
 
@@ -8,8 +73,8 @@
         <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
 
         <video id="contentElement" style="display:none;position: absolute;top:0px;left: 0px;">
-                <source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.mp4"/>
-                <source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.webm"/>
+                <source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.mp4"></source>
+                <source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.webm"></source>
       </video>
         <div id="block-Box" style="display:block;width:100%;height:100%;"></div>
     </div>
@@ -48,19 +113,26 @@
         judgeLanTitle();
 
         function judgeLanTitle() {
-            if (window.navigator.language === "zh-TW") {
-                document.title = "小遊戲：合成怪獸家族";
-            } else if (window.navigator.language === "zh-HK") {
-                document.title = "小遊戲：合成怪獸家族";
-            } else if (window.navigator.language === "ko-KR") {
+
+            //        console.log("window.navigator.language",window.navigator.language);
+
+            if (window.navigator.language == "zh-CN" || window.navigator.language == "zh-cn") {
+                document.title = "小遊戲：合成大怪獸";
+            } else if (window.navigator.language == "zh-TW") {
+                document.title = "小遊戲：合成大怪獸";
+            } else if (window.navigator.language == "zh-HK") {
+                document.title = "小遊戲：合成大怪獸";
+            } else if (window.navigator.language == "ko-KR") {
                 document.title = "작은 놀이：큰 수박 을 합성 하 다";
-            } else if (window.navigator.language === "ja-JP") {
+            } else if (window.navigator.language == "ja-JP") {
                 document.title = "ミニゲーム：合成スイカ";
-            } else if (window.navigator.language === "th-TH") {
+            } else if (window.navigator.language == "th-TH") {
                 document.title = "เกมเล็กๆ：แตงโมสังเคราะห์";
             } else {
                 document.title = "Little game：Synthetic watermelon";
             }
+
+
         }
 
         var loadintT = document.getElementById("loadingText");
@@ -69,7 +141,7 @@
             loadintGif.remove();
             loadintT.style.display = ""
             updateLabView(0.1);
-        }, 1000)
+        }, 1 * 1000)
 
         window.timer = null;
         window.tempSeconds = 1;
@@ -82,7 +154,7 @@
         function onload() {
             var winHeight = document.documentElement.clientHeight;
             document.getElementById("canvasDiv").style.height = winHeight + "px";
-        }
+        };
         window.onload = function() {
             document.getElementById("block-Box").style.display = "none";
         }
@@ -143,11 +215,19 @@
             }
         }
 
+
+        /*setTimeout("ShowBannerAD()","2000");*/
     </script>
+
+
+
+
 
     <script src="src/settings.js" charset="utf-8"></script>
     <script src="src/extraSettings.js" charset="utf-8"></script>
+
     <script src="main.js" charset="utf-8"></script>
+
 
     <script>
         window.adsbygoogle = window.adsbygoogle || [];
@@ -155,6 +235,7 @@
             adsbygoogle.push(o);
         }
     </script>
+
 
     <script type="text/javascript">
         (function() {
@@ -165,6 +246,7 @@
 
             var splash = document.getElementById('splash');
             splash.style.display = 'block';
+
 
             console.log("indexlTextTTTT");
 
@@ -182,37 +264,9 @@
         })();
     </script>
 
+
+
+
 </body>
-
-<head>
-    <meta charset="utf-8">
-    <title>合成怪獸家族</title>
-
-    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1, minimum-scale=1,maximum-scale=1" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="format-detection" content="telephone=no">
-
-    <!-- force webkit on 360 -->
-    <meta name="renderer" content="webkit" />
-    <meta name="force-rendering" content="webkit" />
-    <!-- force edge on IE -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="msapplication-tap-highlight" content="no">
-
-    <!-- force full screen on some browser -->
-    <meta name="full-screen" content="yes" />
-    <meta name="x5-fullscreen" content="true" />
-    <meta name="360-fullscreen" content="true" />
-
-    <!-- force screen orientation on some browser -->
-    <meta name="screen-orientation" content="" />
-    <meta name="x5-orientation" content="">
-
-    <meta name="x5-page-mode" content="app">
-
-    <link rel="stylesheet" type="text/css" href="style-mobile.css" />
-
-</head>
 
 </html>
